--- a/api/.env
+++ b/api/.env
@@ -6,7 +6,7 @@ DB_USER=root
 DB_PASSWORD=
 
 # Port on which API will run
-PORT=5000
+PORT=3000
 
 # CORS configuration
-CORS_ORIGIN=http://localhost:3000
+CORS_ORIGIN=http://89.116.32.123:3000
