--- a/api/.env
+++ b/api/.env
@@ -1,8 +1,8 @@
 # Database configuration
-DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_HOST=89.116.32.123
+DB_PORT=3300
 DB_DATABASE=calisuralaw
-DB_USER=root
+DB_USER=web
 DB_PASSWORD=
 
 # Port on which API will run
