--- a/api/.env
+++ b/api/.env
@@ -1,9 +1,9 @@
 # Database configuration
-DB_HOST=89.116.32.123
-DB_PORT=3300
-DB_DATABASE=calisuralaw
-DB_USER=web
-DB_PASSWORD=
+DB_HOST=beuma5l7exngin5pxpyt-mysql.services.clever-cloud.com
+DB_PORT=3306
+DB_DATABASE=beuma5l7exngin5pxpyt
+DB_USER=uyrouwexnp9qqdhp
+DB_PASSWORD=B8x9kFXPaJo0ZOgl4dki
 
 # Port on which API will run
 PORT=3000
